[package]
name = "tower-sessions-memcache-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
futures = "0.3.31"
memcache-async = "0.8.0"
rmp-serde = "1.3.0"
time = "0.3.36"
tokio = { version = "1.41.0", default-features = false, features = ["sync"] }
tower-sessions-core = "0.13.0"
